--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-complete-&-earn",
+  "name": "copy-of-task-complete-&-earn",
   "private": true,
   "version": "0.0.0",
   "type": "module",
